--- a/sections/Analyse/PlatformChoice.tex
+++ b/sections/Analyse/PlatformChoice.tex
@@ -3,19 +3,19 @@ The purpose of this chapter will be to analyse the different hardware platforms
 available, and ultimately select one for the project. The platforms to be
 examined are LEGO Mindstorms NXT and Arduino. These are chosen due to the fact
 that these platforms are offered by the university and that they are suited for
-implementing an embedded system. First the platforms will be described briefly,
-then they will be compared based on a set of criteria. In conclusion a platform
+implementing an embedded system. First, the platforms will be described briefly,
+then they will be compared based on a set of criteria. In conclusion, a platform
 for the project will be chosen.
 
 \section{Evaluation Criteria}\label{EvalCrit}
-In order to compare the two platforms we have to establish a set of criteria
+In order to compare the two platforms, we have to establish a set of criteria
 which can be used to evaluate their individual strengths. The criteria
 will be based on the ease of use, availability of components and the limitations
 of the hardware. The comparison of NXT and Arduino are based on the following
 criteria:
 
 \begin{itemize}
-  \item Building - The turret needs to be physically constructed, thus an
+  \item Building - The turret needs to be physically constructed, and thus an
   important factor is the need for a simple construction process, which can
   allow for more focus on the software aspect.
   %\item Integration of Sensors - As mentioned before, the group doesn't want to
@@ -107,12 +107,12 @@ The second option is to use the Arduino platform with modules made
 for the NXT. This can be achieved by using a special shield, that
 extends the Arduino with ports that are compatible with the NXT modules. This
 would allow us to have the customizability of the Arduino while still being able
-to use the proprietary sensors from the NXT. However the NXT shield is limited
+to use the proprietary sensors from the NXT. However, the NXT shield is limited
 as it only supports up to two motors \citep{NXTShield}. 
 
 \section{Platform comparison}
 Based on the criteria defined in \autoref{EvalCrit}, this section will be used
-to evaluate the two prototyping platforms, and finally conclude which platform
+to evaluate the two prototyping platforms, and finally, conclude which platform
 will be used for the \name project. This evaluation is based on a combination of
 the group members personal experiences and technical details of the individual
 system.
@@ -168,7 +168,7 @@ regards to the two platforms.
 As mentioned before, the peripherals needed for the project are available for
 both platforms so this is not a deciding factor.\nl
 
-In conclusion the group has chosen the LEGO Mindstorms NXT platform for use in
+In conclusion, the group has chosen the LEGO Mindstorms NXT platform for use in
 the project based on the following reasons:
 
 \begin{itemize}
