--- a/sections/Analyse/SystemDescription/Conclusion.tex
+++ b/sections/Analyse/SystemDescription/Conclusion.tex
@@ -9,7 +9,7 @@ different aspects can be used in relation to the \name system.
   an embedded system, which implies that we need to take the
   hardware constraints into account and design according these limitations.
   This requirement is fulfilled by using a hardware platform such as the Arduino or
-  the LEGO Mindstorms NXT, since the platforms are restricted on the basis of
+  the LEGO Mindstorms NXT since the platforms are restricted on the basis of
   computing power, size and memory.
   \item Using a belief network with an underlying HMM allows \name to have a
   model that can be populated with observations from the sensors. This allows
