--- a/sections/Design/TnTDesign/TurretDesign.tex
+++ b/sections/Design/TnTDesign/TurretDesign.tex
@@ -328,7 +328,7 @@ target. For this purpose three designs were considered: a \textbf{spiral gear
 design}, a \textbf{direct connection design} and a \textbf{gear design}.
 
 \subsubsection{Spiral Design}
-In the spiral gear design a motor was placed beside the turret. This motor was
+In the spiral gear design, a motor was placed beside the turret. This motor was
 connected to a stick with a spiral gear that was connected to a gear on the
 bottom of the base. This design made the turning of the turret precise in the
 sense that the turret was not prone to over turning when stopping. The problem
