--- a/sections/Implementation/Main.tex
+++ b/sections/Implementation/Main.tex
@@ -1,6 +1,6 @@
 \section{Tasks}
 The developed software is controlled by the execution of a number of
-tasks. On the NXT system a task is simply a collection of code which can be
+tasks. On the NXT system, a task is simply a collection of code which can be
 executed on a thread. The turret makes use of four central tasks:
 \texttt{Main}, \texttt{GetDataAndCalculate}, \texttt{WaitAndFire} and
 \texttt{Tracking}.
