--- a/sections/Implementation/Tracking.tex
+++ b/sections/Implementation/Tracking.tex
@@ -187,7 +187,7 @@ float GetSpeed(int blobcenter){
 \end{lstlisting}
 \end{minipage}
 
-In conclusion, the tracking phase consists of reading input from the camera, and
+In conclusion, the tracking phase consists of reading input from the camera and
 using this data to track the target. This is done by determining the target's
 direction, and using a sine function to map the pixel-difference in blob
 positions to a respective rotational speed.
