--- a/sections/Introduction.tex
+++ b/sections/Introduction.tex
@@ -15,7 +15,7 @@ developing for embedded systems impose hardware limitations, in the form of a
 limited amount of memory and processing power. Therefore, this project will be
 focused on designing, implementing and optimizing a software solution for an
 embedded hardware platform. Furthermore, this project will include
-aspects relating to the f machine intelligence models.
+aspects relating to the implementation of machine intelligence models.
 % The theme of this semester is Embedded systems. This means that the focus of
 % the project will be working with a set of constraints that must be balanced.
 % Furthermore the project should include techniques from the machine intelligence
