--- a/sections/PhysTheory/ProjectileMotion.tex
+++ b/sections/PhysTheory/ProjectileMotion.tex
@@ -91,8 +91,8 @@ formula:
 y_0\ =\ h\ +\ r\ *\ sin(a)
 \end{equation}
 
-In order to calculate $x_0$ we can use the cosine for the angle to determine the
-distance. We can formulate the following formula:
+In order to calculate $x_0$, we can use the cosine for the angle to determine
+the distance. We can formulate the following formula:
 \begin{equation}\label{Y0Eq}
 x_0\ =\ r\ *\ cos(a)
 \end{equation}
