--- a/sections/Requirements/ProblemDomain.tex
+++ b/sections/Requirements/ProblemDomain.tex
@@ -23,12 +23,12 @@ each other.
 The turret is placed on an even surface and activated. It then rotates
 horizontally while searching for a target by turning left and right.\nl
 
-The target is moving on an even plane at a constant but unknown speed while
+The target is moving on an even plane at a constant but unknown speed, while
 driving in a straight line. It enters the turrets firing zone from an
 unknown angle. The target moves at a speed such that it will miss the target if
 it fires when the target is directly in front of the turret.\nl
 
-The turret detects a target and begins to track its movements. The turret then
+The turret detects a target, and begins to track its movements. The turret then
 begins to predict the target's movements in order to anticipate the targets
 position at any future point in time.\nl
 
