--- a/sections/Sensors/Sensors.tex
+++ b/sections/Sensors/Sensors.tex
@@ -24,8 +24,8 @@ The contestants regarding the choice of camera were between a
 ``Microsoft Kinect'' and a ``NXTCam v4''. While the Kinect is vastly more
 powerful, it poses the problems of being a larger device which could not easily
 be placed on a turning turret, and it would need to be connected to a PC in
-order to translate its input into useful data. On the other hand the NXTCam is less
-powerful, but it is easily integrated with the LEGO NXT platform and it can
+order to translate its input into useful data. On the other hand, the NXTCam is
+less powerful, but it is easily integrated with the LEGO NXT platform and it can
 be placed on the turret itself. In the end, we chose to use the NXTCam, as one
 of the goals of this semester is to teach us about designing around the
 limitations of embedded systems.
