--- a/sections/Sensors/Ultrasonic.tex
+++ b/sections/Sensors/Ultrasonic.tex
@@ -30,7 +30,7 @@ sensor's technical specifications can be found below \citep{Ultrasonic_sensor}:
 
 \section{Ultrasonic Sensor Testing}\label{SensorTest}
 The first sensor we need to test is the ultrasonic distance sensor. These tests
-will be used to verify the contents of the technical specification, and
+will be used to verify the contents of the technical specification and
 to better understand how the sensor operates and what
 problems could occur when using it. As such, the tests will consist of
 clarifying the following points:
@@ -93,8 +93,8 @@ The results from this test can be seen below in
 actual distance is on the x-axis and the measured distance is on the y-axis.
 Based on the collected data, it can be concluded that the target needs to be
 wider rather than taller, in order to get the best results. Furthermore, it was
-found that the size of the target does not influence the results much, it should
-however be noted that the orientation of the target is important.
+found that the size of the target does not influence the results much, it
+should, however, be noted that the orientation of the target is important.
 
 \graphL{Actual distance [cm]}{Measured distance
 [cm]}{unshieldedBoxStanding,unshieldedBoxLandscape}{Box vertical, Box
@@ -120,10 +120,10 @@ horizontal}{Results with a sensor and a A4 Paper.}{unshieldedTestPaper}
 % have a big impact. This is due to the fact that the sensor does not have a very
 % large field of view. Therefore, the object should be wider rather than taller.
 
-During the tests a hypothesis was formed based on observations that the sensor
+During the tests, a hypothesis was formed based on observations that the sensor
 should not be placed close to the ground due to the fact that the reflection of
-the ground corrupted the data. This was not tested, but still has an effect on the
-final design. 
+the ground corrupted the data. This was not tested, but has still had an effect
+on the final design. 
 
 \subsection{Ultrasonic Sensor Test - 2 Sensors}
 
@@ -131,7 +131,7 @@ The second test on the ultrasonic sensor is designed to determine the accuracy
 of the sensors measurements compared to the actual distance. As such, the test
 was conducted using the test setup explained in \autoref{UltraTestSetup} using
 two ultrasonic sensors. The measurements were done at varying distances with an
-interval of 25cm, and were measured 8 times at each distance. The results from
+interval of 25cm and were measured 8 times at each distance. The results from
 this test are presented below in \autoref{table:UltDistTestData}. \\
 Based on these results, we can conclude that the sensor with the lowest
 distance is usually the most accurate.
