--- a/sections/Testing/HitTest.tex
+++ b/sections/Testing/HitTest.tex
@@ -11,8 +11,8 @@ in the test is the final version of the target.
 The turret is tested with the target running at three different speeds,
 40\%, 50\% and 60\%. Each percentage is a measure of how much power the engines
 are running at. For each speed setting, the turret is tested at the 3 different
-lengths mentioned in the test setup. For each combination of speed and distance the test
-is run 4 times. The turret is placed such that it ``looks'' in the direction of
+lengths mentioned in the test setup. For each combination of speed and distance,
+the test is run 4 times. The turret is placed such that it ``looks'' in the direction of
 the target for every test. The target is then turned on at the speed and distance to be tested,
 and then it is observed whether the turret hits or misses the target.
 
