--- a/sections/Testing/UnitTest.tex
+++ b/sections/Testing/UnitTest.tex
@@ -62,9 +62,9 @@ The tested functions are:
 \end{itemize} 
 
 In \autoref{combineVectorsTest} the basic setup can be seen. On \textbf{Line
-2-15} the needed information is arranged, however the expected output is not
+2-15} the needed information is arranged, however, the expected output is not
 defined yet. This is defined in the assert part as this was the easiest way to
-do it. On \textbf{Line 16}, the tested function is called and in this case the
+do it. On \textbf{Line 16}, the tested function is called and in this case, the
 output is put into a struct called \texttt{DirectionVector}. Then finally we use
 an if statement to check the output against the expected and if the output
 corresponds to the expected we return true. This return value is then used to
