--- a/sections/Appendix/Physics/DistanceTest.tex
+++ b/sections/Appendix/Physics/DistanceTest.tex
@@ -6,17 +6,17 @@ projectile. This appendix will be used to present this test and the resulting
 conclusions.
 
 \section{Test Setup}
-In this test the turret is placed next to a wall which have been marked with
+In this test, the turret is placed next to a wall which has been marked with
 distance indicators. The turret is facing right, and all tests are video
 recorded. This setup can be seen in \autoref{DistanceTestSetup.JPG}.
 \figx[0.1]{DistanceTestSetup.JPG}{Experiment setup for testing projectile
 distance.} In \autoref{DistanceTestSetup.JPG} the turret's muzzle is placed exactly 1 meter
-from the distance markings. As such, each full line on the markers represent a
-distance of 1 meter. A paper has been placed in the background in order to
-identify the recorded test when evaluating the videos. 
+from the distance markings. As such, full line on the wall represent a
+distance of 1 meter. In addition, a piece of paper has been placed in the
+background in order to identify the recorded test when evaluating the videos. 
 
 \subsection{Test Execution}
-In each test the turret starts in its resting position at an angle of ~5
+In each test, the turret starts in its resting position at an angle of ~5
 degrees. The turret then angles itself to the given position and fires a single
 projectile. This procedure is video recorded in order to accurate determine
 exactly where the projectile landed. This is done a number of times for each
@@ -34,10 +34,10 @@ For each measured angle this gives the following average distance:
 realationship}{AngDistRelAVG}
 
 \subsection{Theorem Comparison}
-The data from these tests have been gathered emperically, but in order to
-determine their quality, or to identify any unknown variables, it is necessary
-to compare them to the theoretical results. This can be determined by using
-\autoref{FinEq3} which was described in \autoref{CalcDist}:
+In order to
+determine the quality of the gathered data, or to identify any unknown
+problems, it is necessary to compare them to the theoretical results. This can
+be determined by using \autoref{FinEq3} which was described in \autoref{CalcDist}:
 
 \begin{equation*}
 x\ =\ \frac{v_0*cos(a)}{g}* \left(
