--- a/sections/Design/SystemArchitecture/HardwareArch.tex
+++ b/sections/Design/SystemArchitecture/HardwareArch.tex
@@ -12,16 +12,16 @@ functionality. These components are:
   \item 6 RJ12 Connector Cables
 \end{itemize}
 
-In this setup all components are connected to the NXT Brick, and communicate
+In this setup, all components are connected to the NXT Brick, and communicate
 through cables. A single servo motor is used for the firing mechanism, one
 is used to rotate the turret horizontally and one is used to angle the
 cannon. The ultrasonic sensors are used to gather data
-about the distance to the target, and the camera collects data about the
+about the distance to the target and the camera collects data about the
 relative position of a target within its vision. A view of the hardware
 components can be seen below in \autoref{HARCH}.
 
 \figx{HARCH}{Figure showing the hardware conncetions within the \name turret.}
 
-In this setup all calculations are done by the NXT, which in turn is responsible
-for controlling all other hardware components by communicating through RJ12
+In this setup, all calculations are done by the NXT, which in turn is
+responsible for controlling all other hardware components by communicating through RJ12
 connector cables.
