--- a/sections/Requirements/ProblemStatement.tex
+++ b/sections/Requirements/ProblemStatement.tex
@@ -1,6 +1,6 @@
 \chapter{Problem Statement}
 
-Throughout the analysis several observations and conclusions were made in
+Throughout the analysis, several observations and conclusions were made in
 regards to the design and future implementation of the autonomous turret. 
 
 In \autoref{ProblemDomain} it was stated that based on the turrets ideal
@@ -10,7 +10,7 @@ turret would make use of two sensor types: a camera for tracking, and an
 ultrasonic sensor for determining the distance to the target.\nl
 
 The system is an embedded system which means that it is constrained due to
-hardware limitations, and that it should be constructed for a single purpose,
+hardware limitations and that it should be constructed for a single purpose,
 in this case: hitting a moving target. The system also needs to have some
 intelligence, this should be done through a belief network in the form of a
 hidden Markov model. This allows it to make predictions based on what it can
